--- a/base_config.json
+++ b/base_config.json
@@ -1,6 +1,7 @@
 {
   "mongodb_connection_string": "mongodb://127.0.0.1:27017",
   "initial_cogs": [
-    "cogs.cog_test"
+    "cogs.core",
+    "cogs.api"
   ]
 }
