--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 pymongo==3.12.0
 Werkzeug==2.0.1
+redis~=3.5.3
+hiredis
+
+aiohttp~=3.7.4.post0
+orjson~=3.6.0
+requests~=2.26.0
