--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 click==8.0.1
 flask[async]
+waitress
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 pymongo==3.12.0
+dnspython
 Werkzeug==2.0.1
 redis~=3.5.3
 hiredis
